/*
 * Copyright 2023, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine_examples.chatspn.chat;

import "spine/options.proto";

option (type_url_prefix) = "type.chatspn.spine.io";
option java_package = "io.spine.examples.chatspn.chat";
option java_outer_classname = "ChatCardProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine_examples/chatspn/identifiers.proto";
import "spine_examples/chatspn/chat/chat.proto";
import "spine_examples/chatspn/account/user_profile.proto";
import "spine_examples/chatspn/message/message.proto";
import "spine_examples/chatspn/message/message_view.proto";
import "google/protobuf/timestamp.proto";

// Single chat card.
//
// Individual for each user.
//
message ChatCard {
    option (entity) = { kind: PROJECTION };

    // The ID of the chat card.
    ChatCardId card_id = 1;

    // ID of the user for whom the card is intended.
    spine.core.UserId viewer = 2 [(required) = true, (column) = true];

    // ID of the chat to which the card is dedicated.
    ChatId chat_id = 3 [(required) = true, (column) = true];

    // Name of the chat.
    string name = 4 [(required) = true];

    // Type of the chat.
    spine_examples.chatspn.chat.Chat.ChatType type = 5 [(required) = true, (column) = true];

    // The last posted message in this chat.
    spine_examples.chatspn.message.MessageView last_message = 6;
}
